# Tick-Tac

./: .gitignore  .lvglproject  CMakeLists.txt  README.md  lv_conf.h  notes  package.json  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp_bsp/: CMakeLists.txt  bsp_display.c  bsp_display.h  bsp_touch.c  bsp_touch.h
components/lvgl_ui/: CMakeLists.txt  lvgl_ui.c  lvgl_ui.h
components/lvgl_ui/fonts/: comfortaa_20.c  comfortaa_bold_20.c
main/: CMakeLists.txt  idf_component.yml  main.c  midi_clock.c  midi_clock.h  usb_midi.c  usb_midi.h
src/: main.c
temp ref/: main.c  sdkconfig  sdkconfig.defaults  sdkconfig.old
temp ref/components/lvgl_ui/: lvgl_ui.c
temp ref/components/lvgl_ui/tileview/: image_tile.c  qmi8658_tile.c  system_tile.c
temp ref/esp_bsp/: bsp_battery.h  bsp_display.c  bsp_display.h  bsp_i2c.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_sdcard.c  bsp_sdcard.h  bsp_touch.h
temp ref/main/: CMakeLists.txt
